# GeoLibre

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/geolibre-desktop/: package.json  vite.config.ts
apps/geolibre-desktop/src/: index.css  vite-env.d.ts
apps/geolibre-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/geolibre-desktop/src-tauri/src/: lib.rs
apps/geolibre-desktop/src/components/layout/: AddDataDialog.tsx  DesktopShell.tsx  MapContextMenu.tsx  NewProjectDialog.tsx  PrintLayoutDialog.tsx  SettingsDialog.tsx  ShareProjectDialog.tsx  TopToolbar.tsx
apps/geolibre-desktop/src/components/layout/add-data/sources/: PhotosSource.tsx
apps/geolibre-desktop/src/components/layout/toolbar/: AddDataMenu.tsx  ConsentNoticeDialogs.tsx  ControlsMenu.tsx  EditMenu.tsx  HelpMenu.tsx  OsmPbfDialogs.tsx  PluginsMenu.tsx  ProcessingMenu.tsx  ProjectFileDialogs.tsx  ProjectMenu.tsx  constants.ts
apps/geolibre-desktop/src/components/openeo/: OpenEODialog.tsx
apps/geolibre-desktop/src/components/panels/: AttributeTable.tsx  LayerPanel.tsx  StylePanel.tsx
apps/geolibre-desktop/src/components/processing/: GeocodeDialog.tsx  NetworkToolsDialog.tsx  ProcessingDialog.tsx  SegmentationDialog.tsx  SidecarHelpBanner.tsx
apps/geolibre-desktop/src/components/storymap/: StoryMapHandoutDialog.tsx  StoryMapPanel.tsx  StoryMapPresenter.tsx
apps/geolibre-desktop/src/hooks/: useConsentGatedActions.ts  useLayoutOptions.ts  useOsmPbfLoader.ts  useProjectFileActions.ts  useToolbarPanels.ts
apps/geolibre-desktop/src/i18n/locales/: en.json
apps/geolibre-desktop/src/lib/: duckdb-vector-loader.ts  geoagent-style.ts  geometry-wkb.ts  geotagged-photos.ts  gpkg-ogr-contents.ts  gpkg-reader.ts  layer-refresh.ts  pglite-loader.cdn.ts  pglite-loader.ts  print-layout-export.ts  print-layout.ts  storymap-constants.ts  storymap-export.ts  storymap-pdf.ts  ui-profile.ts
backend/geolibre_server/: README.md  pyproject.toml
backend/geolibre_server/geolibre_server/app/: main.py  ml.py  whitebox.py
backend/geolibre_server/tests/: test_ml.py
docs/: architecture.md  downloads.md  index.md  project-format.md  roadmap.md
docs/superpowers/specs/: 2026-06-12-embed-build-cdn-pglite-design.md
docs/user-guide/: segmentation.md
packaging/aur/: PKGBUILD  README.md
python/src/geolibre/: geolibre.py  project.py
python/tests/: test_map.py  test_project.py
scripts/: build-embed.mjs  render-aur-pkgbuild.sh
tests/: core-project.test.ts  external-deck-order.test.ts  geocoding.test.ts  geometry-wkb-decode.test.ts  geotagged-photos.test.ts  gpkg-reader.test.ts  label-sync.test.ts  layout-options.test.ts  network-tools.test.ts  print-layout.test.ts  routing.test.ts  storymap-pdf.test.ts  stroke-width-unit.test.ts
