[project]
name = "geolibre-server"
version = "1.0.0"
description = "Optional Python processing sidecar for GeoLibre Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
whitebox = [
  "whitebox-workflows>=2.0.2",
]
conversion = [
  "duckdb>=1.1.0",
  "rio-cogeo>=5.0.0",
  "freestiler>=0.1.0",
]
# Optional GeoPandas engine for the Vector processing tools. Not installed by
# default to keep the bundled sidecar small; the desktop app falls back to the
# client-side (Turf.js) engine when this is absent.
vector = [
  "geopandas>=1.0",
  "shapely>=2.0",
]
# Raster processing tools (hillshade, slope, reproject, polygonize, contour...).
# rasterio + numpy already arrive via the `conversion` extra (rio-cogeo); they
# are listed here too so the raster feature can be installed on its own.
raster = [
  "rasterio>=1.3.0",
  "numpy>=1.24",
  "contourpy>=1.2.0",
]
# AI segmentation toolbox (SamGeo / SAM3). The sidecar only proxies to a
# separate `samgeo-api` server, so it just needs an HTTP client here; the heavy
# model stack (segment-geospatial[api,samgeo3] + Torch) is installed and run
# separately (its own GPU env or launched on demand). See app/ml.py.
ml = [
  "httpx>=0.27",
]
# Future geospatial stack (not required for MVP UI):
# geo = [
#   "gdal",
#   "geopandas",
#   "rasterio",
#   "whitebox",
#   "leafmap",
#   "duckdb",
# ]

[project.scripts]
geolibre-server = "geolibre_server.app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geolibre_server"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
